courses/430_programming-languages/assignment-6/tests/error/new_error01.correct
cannot pass value of type '(int*bool*string -> int)' as '(int*int*string -> int)'
